[package]
name = "sy_infra-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
sy_api = { path = "../../sy_api" }
sy_core = { path = "../../sy_core" }
sy_infra = { path = ".." }
sy_types = { path = "../../sy_types" }
tempfile = "3.10"

[[bin]]
name = "decode_record"
path = "fuzz_targets/decode_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wal_round_trip"
path = "fuzz_targets/wal_round_trip.rs"
test = false
doc = false
bench = false

[workspace]
